// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/DataExport/Detail/ExportDetail/ExportTaskList/AuditResultTag should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
      >
        <svg
          height="16"
          viewBox="0 0 20 20"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
        <span>
          审核通过
        </span>
      </span>
    </div>
  </body>,
  "container": <div>
    <span
      class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
    >
      <svg
        height="16"
        viewBox="0 0 20 20"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
          fill="#41BF9A"
        />
      </svg>
      <span>
        审核通过
      </span>
    </span>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test base/DataExport/Detail/ExportDetail/ExportTaskList/AuditResultTag should match snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
      >
        <svg
          height="16"
          viewBox="0 0 20 20"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
        <span>
          审核通过
        </span>
      </span>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="错误"
            class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
            data-error-priority="ungraded"
            data-icon-key="error"
            title="错误"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                fill="#F66074"
              />
            </svg>
            <span>
              <span
                class="audit-result-tag-label"
              >
                错误
              </span>
              <span
                class="audit-result-tag-count"
              >
                 
                1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <span
          aria-label="错误"
          class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
          data-error-priority="ungraded"
          data-icon-key="error"
          title="错误"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
              fill="#F66074"
            />
          </svg>
          <span>
            <span
              class="audit-result-tag-label"
            >
              错误
            </span>
            <span
              class="audit-result-tag-count"
            >
               
              1
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test base/DataExport/Detail/ExportDetail/ExportTaskList/AuditResultTag should match snapshot 3`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
      >
        <svg
          height="16"
          viewBox="0 0 20 20"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
        <span>
          审核通过
        </span>
      </span>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="错误"
            class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
            data-error-priority="ungraded"
            data-icon-key="error"
            title="错误"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                fill="#F66074"
              />
            </svg>
            <span>
              <span
                class="audit-result-tag-label"
              >
                错误
              </span>
              <span
                class="audit-result-tag-count"
              >
                 
                1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="普通"
            class="ant-tag ant-tag-has-color ant-tag-borderless audit-result-tag-item audit-result-tag-item-normal basic-tag-wrapper basic-large-tag-wrapper css-194rg1q css-dev-only-do-not-override-txh9fw"
            data-icon-key="normal"
            style="background-color: gray;"
            title="普通"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                fill="#C3C6CD"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <span
          aria-label="普通"
          class="ant-tag ant-tag-has-color ant-tag-borderless audit-result-tag-item audit-result-tag-item-normal basic-tag-wrapper basic-large-tag-wrapper css-194rg1q css-dev-only-do-not-override-txh9fw"
          data-icon-key="normal"
          style="background-color: gray;"
          title="普通"
        >
          <svg
            height="19"
            viewBox="0 0 18 19"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
              fill="#C3C6CD"
            />
          </svg>
          <span>
            1
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test base/DataExport/Detail/ExportDetail/ExportTaskList/AuditResultTag should match snapshot 4`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
      >
        <svg
          height="16"
          viewBox="0 0 20 20"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
        <span>
          审核通过
        </span>
      </span>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="错误"
            class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
            data-error-priority="ungraded"
            data-icon-key="error"
            title="错误"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                fill="#F66074"
              />
            </svg>
            <span>
              <span
                class="audit-result-tag-label"
              >
                错误
              </span>
              <span
                class="audit-result-tag-count"
              >
                 
                1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="普通"
            class="ant-tag ant-tag-has-color ant-tag-borderless audit-result-tag-item audit-result-tag-item-normal basic-tag-wrapper basic-large-tag-wrapper css-194rg1q css-dev-only-do-not-override-txh9fw"
            data-icon-key="normal"
            style="background-color: gray;"
            title="普通"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                fill="#C3C6CD"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="提示"
            class="ant-tag ant-tag-blue ant-tag-borderless audit-result-tag-item audit-result-tag-item-notice basic-tag-wrapper basic-large-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
            data-icon-key="notice"
            title="提示"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                fill="#6094FC"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <span
          aria-label="提示"
          class="ant-tag ant-tag-blue ant-tag-borderless audit-result-tag-item audit-result-tag-item-notice basic-tag-wrapper basic-large-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
          data-icon-key="notice"
          title="提示"
        >
          <svg
            height="19"
            viewBox="0 0 18 19"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
              fill="#6094FC"
            />
          </svg>
          <span>
            1
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test base/DataExport/Detail/ExportDetail/ExportTaskList/AuditResultTag should match snapshot 5`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
      >
        <svg
          height="16"
          viewBox="0 0 20 20"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
        <span>
          审核通过
        </span>
      </span>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="错误"
            class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
            data-error-priority="ungraded"
            data-icon-key="error"
            title="错误"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                fill="#F66074"
              />
            </svg>
            <span>
              <span
                class="audit-result-tag-label"
              >
                错误
              </span>
              <span
                class="audit-result-tag-count"
              >
                 
                1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="普通"
            class="ant-tag ant-tag-has-color ant-tag-borderless audit-result-tag-item audit-result-tag-item-normal basic-tag-wrapper basic-large-tag-wrapper css-194rg1q css-dev-only-do-not-override-txh9fw"
            data-icon-key="normal"
            style="background-color: gray;"
            title="普通"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                fill="#C3C6CD"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="提示"
            class="ant-tag ant-tag-blue ant-tag-borderless audit-result-tag-item audit-result-tag-item-notice basic-tag-wrapper basic-large-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
            data-icon-key="notice"
            title="提示"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                fill="#6094FC"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="告警"
            class="ant-tag ant-tag-orange ant-tag-borderless audit-result-tag-item audit-result-tag-item-warn basic-tag-wrapper basic-large-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
            data-icon-key="warn"
            title="告警"
          >
            <svg
              fill="none"
              height="19"
              viewBox="0 0 16 16"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                fill="#EBAD1C"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <span
          aria-label="告警"
          class="ant-tag ant-tag-orange ant-tag-borderless audit-result-tag-item audit-result-tag-item-warn basic-tag-wrapper basic-large-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
          data-icon-key="warn"
          title="告警"
        >
          <svg
            fill="none"
            height="19"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
              fill="#EBAD1C"
            />
          </svg>
          <span>
            1
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test base/DataExport/Detail/ExportDetail/ExportTaskList/AuditResultTag should match snapshot 6`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <span
        class="ant-tag ant-tag-green ant-tag-borderless basic-tag-wrapper basic-large-tag-wrapper css-1ubynud css-dev-only-do-not-override-txh9fw"
      >
        <svg
          height="16"
          viewBox="0 0 20 20"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 18.333a8.333 8.333 0 1 1 0-16.666 8.333 8.333 0 1 1 0 16.666m-.83-5 5.89-5.892-1.177-1.178-4.714 4.714-2.357-2.358-1.179 1.179z"
            fill="#41BF9A"
          />
        </svg>
        <span>
          审核通过
        </span>
      </span>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="错误"
            class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
            data-error-priority="ungraded"
            data-icon-key="error"
            title="错误"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                fill="#F66074"
              />
            </svg>
            <span>
              <span
                class="audit-result-tag-label"
              >
                错误
              </span>
              <span
                class="audit-result-tag-count"
              >
                 
                1
              </span>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="普通"
            class="ant-tag ant-tag-has-color ant-tag-borderless audit-result-tag-item audit-result-tag-item-normal basic-tag-wrapper basic-large-tag-wrapper css-194rg1q css-dev-only-do-not-override-txh9fw"
            data-icon-key="normal"
            style="background-color: gray;"
            title="普通"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 17H3a.75.75 0 0 1-.75-.75V2.75A.75.75 0 0 1 3 2h12a.75.75 0 0 1 .75.75v13.5A.75.75 0 0 1 15 17M6 5.75v1.5h6v-1.5zm0 3v1.5h6v-1.5zm0 3v1.5h3.75v-1.5z"
                fill="#C3C6CD"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="提示"
            class="ant-tag ant-tag-blue ant-tag-borderless audit-result-tag-item audit-result-tag-item-notice basic-tag-wrapper basic-large-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
            data-icon-key="notice"
            title="提示"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                fill="#6094FC"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="告警"
            class="ant-tag ant-tag-orange ant-tag-borderless audit-result-tag-item audit-result-tag-item-warn basic-tag-wrapper basic-large-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
            data-icon-key="warn"
            title="告警"
          >
            <svg
              fill="none"
              height="19"
              viewBox="0 0 16 16"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                fill="#EBAD1C"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
    <div>
      <div
        class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
        style="flex-wrap: wrap; margin-bottom: -8px;"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <span
            aria-label="错误"
            class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
            data-error-priority="ungraded"
            data-icon-key="error"
            title="错误"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
                fill="#F66074"
              />
            </svg>
            <span>
              <span
                class="audit-result-tag-label"
              >
                错误
              </span>
              <span
                class="audit-result-tag-count"
              >
                 
                1
              </span>
            </span>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 8px; padding-bottom: 8px;"
        >
          <span
            aria-label="告警"
            class="ant-tag ant-tag-orange ant-tag-borderless audit-result-tag-item audit-result-tag-item-warn basic-tag-wrapper basic-large-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
            data-icon-key="warn"
            title="告警"
          >
            <svg
              fill="none"
              height="19"
              viewBox="0 0 16 16"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                fill="#EBAD1C"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
        <div
          class="ant-space-item"
          style="padding-bottom: 8px;"
        >
          <span
            aria-label="提示"
            class="ant-tag ant-tag-blue ant-tag-borderless audit-result-tag-item audit-result-tag-item-notice basic-tag-wrapper basic-large-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
            data-icon-key="notice"
            title="提示"
          >
            <svg
              height="19"
              viewBox="0 0 18 19"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
                fill="#6094FC"
              />
            </svg>
            <span>
              1
            </span>
          </span>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-tag"
      style="flex-wrap: wrap; margin-bottom: -8px;"
    >
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <span
          aria-label="错误"
          class="ant-tag ant-tag-red ant-tag-borderless audit-result-tag-item audit-result-tag-item-error basic-tag-wrapper basic-large-tag-wrapper css-3qh3vw css-dev-only-do-not-override-txh9fw"
          data-error-priority="ungraded"
          data-icon-key="error"
          title="错误"
        >
          <svg
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 14.666A6.666 6.666 0 1 1 8 1.333a6.666 6.666 0 0 1 0 13.333m0-7.609L6.115 5.171l-.944.943L7.057 8 5.171 9.885l.944.943L8 8.942l1.885 1.886.944-.943L8.943 8l1.886-1.886-.944-.943z"
              fill="#F66074"
            />
          </svg>
          <span>
            <span
              class="audit-result-tag-label"
            >
              错误
            </span>
            <span
              class="audit-result-tag-count"
            >
               
              1
            </span>
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="margin-right: 8px; padding-bottom: 8px;"
      >
        <span
          aria-label="告警"
          class="ant-tag ant-tag-orange ant-tag-borderless audit-result-tag-item audit-result-tag-item-warn basic-tag-wrapper basic-large-tag-wrapper css-91vcnh css-dev-only-do-not-override-txh9fw"
          data-icon-key="warn"
          title="告警"
        >
          <svg
            fill="none"
            height="19"
            viewBox="0 0 16 16"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
              fill="#EBAD1C"
            />
          </svg>
          <span>
            1
          </span>
        </span>
      </div>
      <div
        class="ant-space-item"
        style="padding-bottom: 8px;"
      >
        <span
          aria-label="提示"
          class="ant-tag ant-tag-blue ant-tag-borderless audit-result-tag-item audit-result-tag-item-notice basic-tag-wrapper basic-large-tag-wrapper css-1dyku9p css-dev-only-do-not-override-txh9fw"
          data-icon-key="notice"
          title="提示"
        >
          <svg
            height="19"
            viewBox="0 0 18 19"
            width="18"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m11.951 2.376 4.174 4.173v5.903l-4.174 4.174H6.05l-4.174-4.174V6.549l4.174-4.173zM8.25 11.75v1.5h1.5v-1.5zm0-6v4.5h1.5v-4.5z"
              fill="#6094FC"
            />
          </svg>
          <span>
            1
          </span>
        </span>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
